Bug 392160, improve popup positioning to not use widget calculations, r=sharparrow, sr=bz, a=dbaron